Closed Bug 941327 Opened 11 years ago Closed 11 years ago

ZoomToRect (double-tap) causes the rect to swoop around instead of zooming directly to it

Categories

(Core :: Panning and Zooming, defect)

28 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28

People

(Reporter: mbrubeck, Assigned: mbrubeck)

References

Details

Attachments

(1 file)

When you double-tap to zoom to an element, rather than scaling and scrolling the element linearly into place, the element seems to scroll first down and to the right, then up and to the left, taking a "swoopy" path around the screen before finally ending up centered on screen.
Summary: ZoomToRect (double-tap) causes the rect to swoop around instead of zooming directly to it → Defect - ZoomToRect (double-tap) causes the rect to swoop around instead of zooming directly to it
Whiteboard: [triage] feature=defect c=tbd u=tbd p=0
Assignee: nobody → mbrubeck
Blocks: metro-apzc
Status: NEW → ASSIGNED
Hey Matt, can you provide a point value.
Flags: needinfo?(mbrubeck)
Attached patch patchSplinter Review
This happened because the scale changes and the scroll changes were moving at different rates. This adjusts the scale animation to correctly stay "in sync" with the scroll animation.
Attachment #8335711 - Flags: review?(botond)
(In reply to Marco Mucci [:MarcoM] from comment #1) > Hey Matt, can you provide a point value. I'd consider this a work item for the double-tap story (bug 831986) or the APZC story (bug metro-apzc), but if we want to treat it as a defect then p=1.
Flags: needinfo?(mbrubeck)
No longer blocks: metrov1backlog
Summary: Defect - ZoomToRect (double-tap) causes the rect to swoop around instead of zooming directly to it → ZoomToRect (double-tap) causes the rect to swoop around instead of zooming directly to it
Whiteboard: [triage] feature=defect c=tbd u=tbd p=0
Attachment #8335711 - Flags: review?(botond) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: