Bug 941327 - Match scale to scroll offset during zoom animation [r=botond]